WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111536
DFG should not run full CSE after the optimization fixpoint, since it really just wants store elimination
https://bugs.webkit.org/show_bug.cgi?id=111536
Summary
DFG should not run full CSE after the optimization fixpoint, since it really ...
Filip Pizlo
Reported
2013-03-06 00:42:33 PST
As the title says.
Attachments
work in progress
(11.55 KB, patch)
2013-03-06 12:39 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(13.30 KB, patch)
2013-03-06 13:00 PST
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-03-06 12:39:22 PST
Created
attachment 191812
[details]
work in progress
Filip Pizlo
Comment 2
2013-03-06 13:00:13 PST
Created
attachment 191815
[details]
the patch
Filip Pizlo
Comment 3
2013-03-06 13:25:46 PST
Landed in
http://trac.webkit.org/changeset/144973
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug